--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html data-theme="dark">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-<!--    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">-->
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Octo</title>
+  <script>var exports = {};</script>
+
+  <link rel="stylesheet" href="/assets/fonts/hack.css">
+</head>
+<body>
+<div id="app"></div>
+</body>
 </html>
+
